--- a/fuehrerschein.html
+++ b/fuehrerschein.html
@@ -388,7 +388,7 @@
                 
                 <div class="tasks">
                     <div class="task">
-                        <h3><i class="fas fa-ladder task-icon"></i>Leiterspiel</h3>
+                        <h3><i class="fas fa-stairs task-icon"></i>Leiterspiel</h3>
                         <div class="task-description">5 Stufen</div>
                     </div>
                     <div class="task">
