Improved the vehicle list

--- a/fuehrerschein.html
+++ b/fuehrerschein.html
@@ -371,7 +371,7 @@
                 
                 <div class="warning">
                     <i class="fas fa-exclamation-triangle"></i>
-                    <strong>Kein Treffer?</strong> Leider nicht bestanden, du bekommst eine Busfahrkarte
+                    <strong>Kein Treffer?</strong> Leider nicht bestanden, du bekommst eine Busfahrkarte... Probier es gleich nochmal!
                 </div>
             </div>
             
@@ -518,15 +518,15 @@
                             </thead>
                             <tbody>
                                 <tr><td>11</td><td>Minibagger</td></tr>
-                                <tr><td>12</td><td>Fiat Panda</td></tr>
+                                <tr><td>12</td><td>Schneemobil</td></tr>
                                 <tr><td>13</td><td>Golfcart</td></tr>
                                 <tr><td>14</td><td>Trabi</td></tr>
-                                <tr><td>15</td><td>Volkswagen</td></tr>
-                                <tr><td>16</td><td>Mini Cooper</td></tr>
-                                <tr><td>17</td><td>Audi</td></tr>
-                                <tr><td>18</td><td>Jeep</td></tr>
-                                <tr><td>19</td><td>Tesla</td></tr>
-                                <tr><td>20</td><td>Mercedes</td></tr>
+                                <tr><td>15</td><td>Eiswagen</td></tr>
+                                <tr><td>16</td><td>Fliegender Teppich</td></tr>
+                                <tr><td>17</td><td>Amphibienfahrzeug</td></tr>
+                                <tr><td>18</td><td>Safari-Jeep</td></tr>
+                                <tr><td>19</td><td>U-Boot</td></tr>
+                                <tr><td>20</td><td>Oldtimer</td></tr>
                             </tbody>
                         </table>
                     </div>
@@ -544,8 +544,8 @@
                             <tbody>
                                 <tr><td>21</td><td>Wohnmobil</td></tr>
                                 <tr><td>22</td><td>Porsche</td></tr>
-                                <tr><td>23</td><td>Monster Truck</td></tr>
-                                <tr><td>24</td><td>Polizeiauto</td></tr>
+                                <tr><td>23</td><td>Hot Rod</td></tr>
+                                <tr><td>24</td><td>Monster Truck</td></tr>
                                 <tr><td>25</td><td>Lamborghini</td></tr>
                                 <tr><td>26</td><td>Ferrari</td></tr>
                                 <tr><td>27</td><td>Raketenauto</td></tr>
